--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
+    "cwd": "^0.10.0",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "eslint": "^6.1.0",
